# shadyurl-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  bom-cargo.spdx  build.rs  env_example
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: devskim.yml  rust-clippy.yml  rust-fmt.yml  rust.yml  sbom.yml  stale.yml
entity/: Cargo.toml
entity/src/: cidr_ban.rs  lib.rs  mod.rs  prelude.rs  url.rs  url_filter.rs  user.rs
entity/src/entities/: mod.rs  prelude.rs  url.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230702_081718_create_table.rs  m20230713_214521_add_unique_constraint.rs  m20240302_082409_create_user_table.rs  m20240312_050549_create_url_filter_table.rs  m20240312_184421_create_ip_filter_table.rs  m20240314_011046_convert_to_timezone.rs  main.rs
service/: Cargo.toml
service/src/: database.rs  lib.rs  mutation.rs  query.rs
src/: auth.rs  bancache.rs  cli.rs  csrf.rs  daemon.rs  database.rs  env.rs  err.rs  error_response.rs  generate.rs  loadenv.rs  logging.rs  main.rs  router.rs  state.rs  templates.rs  urlcache.rs  util.rs  validators.rs  web.rs
src/cli/: parser.rs  subcommands.rs
src/cli/subcommands/: adduser.rs  changepassword.rs  deleteuser.rs  generatekey.rs  generatekeys.rs  run.rs
src/controllers/: admin.rs  err.rs  mod.rs  shadify.rs
src/util/: bits.rs  format.rs  macros.rs  math.rs  net.rs  string.rs
src/web/: admin.rs  app.rs  fallback.rs  files.rs  submission.rs  url.rs
src/web/admin/: auth.rs  cidr_ban.rs  delete.rs  index.rs  url_filter.rs  urls.rs
static/: robots.txt
static/assets/: style.css
templates/: admin.html  base.html  error.html  index.html  login_landing.html  post.html  post_error.html  submit.html
templates/admin/: admin_base.html  cidr_ban.html  index.html  login.html  url_filter.html  urls.html
templates/errors/: base.html
templates/errors/code/: 400.html  403.html  404.html  500.html
templates/errors/form/: url.html
utils/: password_hash.sh  secret_key.sh
