# SPDX-License-Identifier: CC0-1.0
#
# Cargo.toml
#
# This file is a component of ShadyURL by Elizabeth Myers.
#
# To the extent possible under law, the person who associated CC0 with
# ShadyURL has waived all copyright and related or neighboring rights
# to ShadyURL.
#
# You should have received a copy of the CC0 legalcode along with this
# work.  If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.

[package]
name = "shadyurl-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
authors = ["Elizabeth Myers"]
description = "A webapp that makes URLs shady"
license = "CC0-1.0"
homepage = "https://github.com/Elizafox/ShadyURL-Rust"
repository = "https://github.com/Elizafox/ShadyURL-Rust"
readme = "README.md"

[workspace]
members = [".", "entity", "migration"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[features]
default = ["sqlite"]
mysql = ["sea-orm/sqlx-mysql", "sea-query/backend-postgres", "migration/mysql"]
postgres = ["sea-orm/sqlx-postgres", "sea-query/backend-postgres", "migration/postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-query/backend-sqlite", "migration/sqlite"]
with-tracing = ["axum/tracing", "tokio/tracing", "tower/tracing", "tower-http/tracing"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }


######################################
# Package dependencies go below here #
######################################

anyhow = { version = "1.0.80", features = ["backtrace"] }
argon2-kdf = "1.5.2"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
async-fred-session = "0.1.5"
axum = { version = "0.6.20", features = ["macros", "http2", "headers"] }
axum-client-ip = "0.4.2"
axum_csrf = { version = "0.7.2", features = ["layer"] }
axum-login = "0.5.0"
base64ct = { version = "1.6.0", features = ["std"] }
dotenvy = "0.15.7"
envy = "0.4.2"
heck = { version = "0.4.1", features = ["unicode"] }
itertools = "0.12.1"
lazy_static = "1.4.0"
nix = { version = "0.27.1", default-features = false, features = ["dir", "process", "user"] }
num_cpus = "1.16.0"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
proctitle = "0.1.1"
rand = { version = "0.8.5", features = ["min_const_gen"] }
rand_chacha = { version = "0.3.1", features = ["simd"] }
rand_distr = "0.4.3"
sea-orm = { version = "0.12.14", default-features = false, features = ["macros", "runtime-tokio-native-tls", "with-chrono"] }
sea-query = { version = "0.30.7", default-features = false, features = ["thread-safe", "with-chrono"] }
serde = { version = "1.0.197", features = ["derive"] }
syslog-tracing = "0.3.0"
tokio = { version = "1.36.0", features = ["fs", "macros", "parking_lot", "rt-multi-thread", "signal", "time"] }
tracing = { version = "0.1.40", features = ["async-await", "log"]}
tracing-subscriber = { version = "0.3.18", features = ["local-time", "parking_lot"]}
tower = { version = "0.4.13", features = ["timeout", "tokio"] }
tower-http = { version = "0.4.4", features = ["fs", "timeout", "tokio", "tower"] }
url = "2.5.0"
validator = { version = "0.16.1", features = ["derive"] }
