# SPDX-License-Identifier: CC0-1.0
#
# Cargo.toml
#
# This file is a component of ShadyURL by Elizabeth Myers.
#
# To the extent possible under law, the person who associated CC0 with
# ShadyURL has waived all copyright and related or neighboring rights
# to ShadyURL.
#
# You should have received a copy of the CC0 legalcode along with this
# work.  If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.

[package]
name = "shadyurl-rust"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Elizabeth Myers"]
categories = ["web-programming::http-server"]
keywords = ["web", "service", "axum", "http"]
description = "A webapp that makes URLs shady"
license = "CC0-1.0"
homepage = "https://github.com/Elizafox/ShadyURL-Rust"
repository = "https://github.com/Elizafox/ShadyURL-Rust"

[workspace]
members = [".", "entity", "migration", "service"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[features]
default = ["sqlite"]
mysql = ["sea-orm/sqlx-mysql", "sea-query/backend-postgres", "migration/mysql"]
postgres = ["sea-orm/sqlx-postgres", "sea-query/backend-postgres", "migration/postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-query/backend-sqlite", "migration/sqlite"]
tracing = ["tokio/tracing", "tower/tracing", "tower-http/tracing"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
service = { path = "service" }


######################################
# Package dependencies go below here #
######################################

aes-gcm-siv = { version = "0.11.1", features = ["std"] }
askama = { version = "0.12.1", features = ["with-axum", "urlencode", "mime", "mime_guess"], default-features = false }
askama_axum = { version = "0.4.0", default-features = false, features = ["urlencode"] }
async-trait = "0.1.78"
axum = { version = "0.7.4", features = ["form", "http1", "http2", "macros", "tokio", "tower-log"] }
axum-client-ip = "0.5.1"
axum-login = "0.14.0"
axum-messages = "0.5.0"
base64 = "0.22.0"
bincode = "1.3.3"
clap = { version = "4.5.3", features = ["cargo", "derive", "unicode"] }
csrf = "0.4.1"
dotenvy = "0.15.7"
envy = "0.4.2"
heck = "0.5.0"
ipnetwork = "0.20.0"
itertools = "0.12.1"
mimalloc = "0.1.39"
moka = { version = "0.12.5", features = ["future"] }
num = "0.4.1"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
password-auth = "1.0.0"
proctitle = "0.1.1"
rand="0.8.5"
rand_distr = "0.4.3"
regex = "1.10.3"
rpassword = "7.3.1"
sea-orm = { version = "1.0.0-rc.2", features = ["macros", "runtime-tokio-native-tls", "with-time"] }
sea-query = { version = "0.31.0-rc.4", features = ["thread-safe", "with-time"] }
serde = { version = "1.0.197", features = ["derive"] }
subtle = { version = "2.5.0", features = ["core_hint_black_box", "const-generics"] }
thiserror = "1.0.58"
time = { version = "0.3.34", features = ["local-offset"] }
tokio = { version = "1.36.0", features = ["macros", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["local-time", "parking_lot", "time"] }
tower = { version = "0.4.13", features = ["timeout", "tokio"] }
tower-http = { version = "0.5.2", features = ["fs", "normalize-path", "timeout", "tokio"] }
tower-sessions = { version = "0.11.1", features = ["axum-core"] }
tower-sessions-redis-store = "0.11.0"
url = "2.5.0"
validator = { version = "0.17.0", features = ["derive"] }
