# SPDX-License-Identifier: CC0-1.0
#
# identity/Cargo.toml
#
# This file is a component of ShadyURL by Elizabeth Myers.
#
# To the extent possible under law, the person who associated CC0 with
# ShadyURL has waived all copyright and related or neighboring rights
# to ShadyURL.
#
# You should have received a copy of the CC0 legalcode along with this
# work.  If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.

[package]
name = "entity"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
sea-orm = { version = "1.0.0-rc.2", default-features = false, features = ["with-time"] }
