# SPDX-License-Identifier: CC0-1.0
#
# migration/Cargo.toml
#
# This file is a component of ShadyURL by Elizabeth Myers.
#
# To the extent possible under law, the person who associated CC0 with
# ShadyURL has waived all copyright and related or neighboring rights
# to ShadyURL.
#
# You should have received a copy of the CC0 legalcode along with this
# work.  If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.

[package]
name = "migration"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[features]
default = ["sqlite"]
mysql = ["sea-orm-migration/sqlx-mysql"]
postgres = ["sea-orm-migration/sqlx-postgres"]
sqlite = ["sea-orm-migration/sqlx-sqlite"]

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.0.0-rc.2", features = ["runtime-tokio-native-tls", "with-time"] }
