# SPDX-License-Identifier: CC0-1.0
#
# service/Cargo.toml
#
# This file is a component of ShadyURL by Elizabeth Myers.
#
# To the extent possible under law, the person who associated CC0 with
# ShadyURL has waived all copyright and related or neighboring rights
# to ShadyURL.
#
# You should have received a copy of the CC0 legalcode along with this
# work.  If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.

[package]
name = "service"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "service"
path = "src/lib.rs"

[features]
default = ["sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

[dependencies]
entity = { path = "../entity" }
migration = {path = "../migration" }
ipnetwork = "0.20.0"
sea-orm = { version = "1.0.0-rc.2", features = ["debug-print", "runtime-tokio-native-tls"] }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
